--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
 
@@ -10,14 +10,15 @@
     <meta name="author" content="">
 
     <title>His Teknoloji</title>
+    <link rel="Shortcut Icon" href="img/logo_arka_plan_çıkartılmış.png" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900&subset=latin,latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli&subset=latin,latin-ext" rel="stylesheet">
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
@@ -45,20 +46,21 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menü <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><i>His Teknoloji</i></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo_arka_plan_çıkartılmış.png" class="img-responsive" alt="" width="60"></a>
+                <h3 style="width:250px"><b>His Teknoloji</b></h3>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#features">HİZMETLERİMİZ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#features">Features</a>
+                        <a class="page-scroll" href="#features">İŞBİRLİKLERİMİZ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">REFERANSLARIMIZ</a>
                     </li>
                 </ul>
             </div>
@@ -101,8 +103,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
+                    <h2 class="section-heading">Sensör teknolojisini bizimle keşfedin!</h2>
+                    <p>Demo uygulamalarımız çok yakında mobil platformlarda...</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
                         <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -117,8 +119,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2>Sensör Teknolojisinin Sunduğu Tüm Yenilikler</h2>
+                        <p class="text-muted">Hangi alanlarda size bu teknolojiyi sunduğumuza göz atın!</p>
                         <hr>
                     </div>
                 </div>
@@ -144,15 +146,15 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <h3>İç Mekan Konumlandırma</h3>
+                                    <p class="text-muted">Müşterilerinizi, personelinizi takip edin ve yönlendirin!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <h3>Video Analitiği</h3>
+                                    <p class="text-muted">Kameraların çektiği artık daha değerli!</p>
                                 </div>
                             </div>
                         </div>
@@ -160,15 +162,15 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                    <h3>Arttırılmış Gerçeklik (AR)</h3>
+                                    <p class="text-muted">Sanal ortamla gerçek dünya arasındaki perdeyi kaldırın!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                    <h3>Nesnelerin İnterneti</h3>
+                                    <p class="text-muted">Cihazlar, sensörler artık daha birbirine bağlı ve daha akıllı!</p>
                                 </div>
                             </div>
                         </div>
@@ -180,7 +182,7 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>Stop waiting.<br>Start building.</h2>
+                <h2>Teknolojiyi beklemeyin.<br>Biz sizin ayağınıza getirelim.</h2>
                 <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
             </div>
         </div>
@@ -189,7 +191,7 @@
 
     <section id="contact" class="contact bg-primary">
         <div class="container">
-            <h2>We <i class="fa fa-heart"></i> new friends!</h2>
+            <h2>Bizi takip edin!</h2>
             <ul class="list-inline list-social">
                 <li class="social-twitter">
                     <a href="#"><i class="fa fa-twitter"></i></a>
@@ -197,17 +199,14 @@
                 <li class="social-facebook">
                     <a href="#"><i class="fa fa-facebook"></i></a>
                 </li>
-                <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
             </ul>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
-            <ul class="list-inline">
+            <p>&copy; 2017 His Teknoloji. Tüm Fikir ve Haklarımız Saklıdır.</p>
+            <!-- <ul class="list-inline">
                 <li>
                     <a href="#">Privacy</a>
                 </li>
@@ -217,7 +216,7 @@
                 <li>
                     <a href="#">FAQ</a>
                 </li>
-            </ul>
+            </ul>-->
         </div>
     </footer>
 
